Contrast fixes

--- a/src/additionalComponents/Checkbox.module.css
+++ b/src/additionalComponents/Checkbox.module.css
@@ -1,12 +1,14 @@
 .root {
     all: unset;
     background-color: white;
-    width: 25px;
-    height: 25px;
+    width: 23px;
+    height: 23px;
     border-radius: 4px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    border: 1px solid grey;
+    border-radius: 4px;
 
     &:hover {
         background-color: color-mix(in srgb, var(--scheme-interact) 20%, white);
